[project]
name = "benchmark-runner"
version = "v0.0.0"
description = "Benchmark Runner"
authors = [{name = "GPUStack Authors", email = "contact@gpustack.ai"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"
keywords = [
    "ai",
    "benchmarking",
    "deployment",
    "evaluation",
    "guidance",
    "inference",
    "language-models",
    "large-language-model",
    "llm",
    "model-benchmark",
    "model-evaluation",
    "nlp",
    "performance",
    "gpustack",
    "guidellm"
]
dependencies = [
    "guidellm>=0.5.1",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.1",
]

[project.scripts]
benchmark-runner = "benchmark_runner.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = ["benchmark_runner"]

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true
force-exclude = '''
/(
    .*/migrations/.*
)/
'''
